--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Website under construction! For now, download my resume here
+Website under construction! For now, download my resume 
+<p><a href="images/resume.pdf" target="_blank">Here</a></p>
