--- a/index.html
+++ b/index.html
@@ -15,51 +15,19 @@
             <rect width="100%" height="100%"/>
         </svg>
         <h1>Steven Le</h1>
-        <p>MSCS Student @ Georgia Tech | Software engineer</p>
+        <p>MSCS Graduate from Georgia Tech | Software engineer</p>
         <a href="resume.pdf" download class="resumeBtn">Download My Resume</a>
     </div>
 
     <div class="container">
         <section class="section" id="about">
             <h2>About Me</h2>
-            <p>I'm a software engineer experienced in full-stack development and AI/ML development. I'm currently pursuing my masters degree and re-learning how to use D3. 
-                In my free time you can catch me learning to cook new recipes, watching films, listening to music, or researching fashion history!</p>
-            <h3>Academic Interests</h3>
-            <span class="techTag">Computer Vision</span> 
-            <span class="techTag">Natural Language Processing</span> 
-            <span class="techTag">Human-Computer Interaction</span> 
-            <span class="techTag">User-Centered Design</span> 
-            <span class="techTag">Information Visualization</span>
+            <p>I'm a software engineer experienced in full-stack and AI/ML.  
+                In my free time you can catch me learning to cook new recipes and populating my Letterboxd account!</p>
         </section>
 
-        <!-- using svg to make a visual divider -->
-        <section>
-            <div class="stacked-divider">
-                <svg viewBox="0 0 1000 100">
-                    <defs>
-                        <linearGradient id="grad" x1="0%" y1="0%" x2="100%" y2="0%">
-                            <stop offset="0%" style="stop-color:#f0eaea" />
-                            <stop offset="50%" style="stop-color:#c7b2b2" />
-                            <stop offset="100%" style="stop-color:#a58484"/>
-                        </linearGradient>
-                    </defs>
-                    <rect x="-10" y="90" width="1100" height="10" fill="url(#grad)" opacity="0.05" />
-                    <rect x="-10" y="80" width="1100" height="10" fill="url(#grad)" opacity="0.1" />
-                    <rect x="-10" y="70" width="1100" height="10" fill="url(#grad)" opacity="0.15" />
-                    <rect x="-10" y="60" width="1100" height="10" fill="url(#grad)" opacity="0.2" />
-                    <rect x="-10" y="50" width="1100" height="10" fill="url(#grad)" opacity="0.25" />
-                    <rect x="-10" y="40" width="1100" height="10" fill="url(#grad" opacity="0.3" />
-                    <rect x="-10" y="30" width="1100" height="10" fill="url(#grad)" opacity="0.35" />
-                    <rect x="-10" y="20" width="1100" height="10" fill="url(#grad)" opacity="0.4" />
-                    <rect x="-10" y="10" width="1100" height="10" fill="url(#grad)" opacity="0.45" />
-                    <rect x="-10" y="0" width="1100" height="10" fill="url(#grad)" opacity="0.5" />
-                </svg>
-            </div>
-        </section>
-
-        <!-- This section is dynamically populated in script.js -->
         <section class="section" id="projects">
-            <h2>Personal Projects</h2>
+            <h2>Projects</h2>
             <div id="projectsList"></div>
         </section>
     </div>
