Adding cool visuals and stuff

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body id="top">
     <nav class="navbar">
@@ -31,19 +33,24 @@
     <header class="hero">
         <div class="hero-content">
             <h1>Steven Le</h1>
-            <p class="subtitle">Machine Learning and Software Engineer</p>
-            <p class="location">Based in Washington DC</p>
+            <p class="subtitle">Machine Learning/Software Engineer</p>
         </div>
     </header>
 
     <main class="container">
         <section class="section about" id="about">
-            <div class="section-content">
-                <h2>About Me</h2>
-                <p class="lead-text">Georgia Tech MSCS Grad and ML Enthusiast</p>
-                <p>Currently working as a Machine Learning engineer in the defense space, focused on making
-                    operators' lives easier through Computer Vision and LLMs
-                </p>
+            <div class="section-content about-flex">
+                <div class="about-text">
+                    <h2>About Me</h2>
+                    <p class="lead-text">ML Professional, Film Enthusiast</p>
+                    <p>I'm a recent MSCS graduate from Georgia Tech, currently working as a Machine Learning engineer in the defense space, focused on making
+                        operators' lives easier through Computer Vision and LLMs. In my free time you can find me
+                        reading, watching movies, gaming, or training to be Carmy from The Bear.
+                    </p>
+                </div>
+                <div class="profile-image">
+                    <img src="images/profile.png" alt="Steven Le" />
+                </div>
             </div>
         </section>
 
