--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             <div class="section-content about-flex">
                 <div class="about-text">
                     <h2>About Me</h2>
-                    <p class="lead-text">ML Professional, Film Enthusiast</p>
-                    <p>I'm a recent MSCS graduate from Georgia Tech, currently working as a Machine Learning engineer in the defense space, focused on making
-                        operators' lives easier through Computer Vision and LLMs. In my free time you can find me
-                        reading, watching movies, gaming, or training to be Carmy from The Bear.
+                    <p class="lead-text">ML Professional, Fashion Hobbyist</p>
+                    <p>I'm a recent MSCS graduate from Georgia Tech currently working as a Machine Learning engineer in the defense space, focused on making
+                        operators' lives easier through Computer Vision and LLMs. When I'm not working you can find me
+                        watching movies or looking for deals on Buyee.
                     </p>
                 </div>
                 <div class="profile-image">
-                    <img src="images/profile.png" alt="Steven Le" />
+                    <img src="images/profile.heic" alt="Steven Le" />
                 </div>
             </div>
         </section>
