--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </p>
                 </div>
                 <div class="profile-image">
-                    <img src="images/profile.heic" alt="Steven Le" />
+                    <img src="images/profile.jpeg" alt="Steven Le" />
                 </div>
             </div>
         </section>
