--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <p class="lead-text">ML Professional, Fashion Hobbyist</p>
                     <p>I'm a recent MSCS graduate from Georgia Tech currently working as a Machine Learning engineer in the defense space, focused on making
                         operators' lives easier through Computer Vision and LLMs. When I'm not working you can find me
-                        watching movies or looking for deals on Buyee.
+                        reading, watching movies, or trying to emulate Carmy from The Bear.
                     </p>
                 </div>
                 <div class="profile-image">
@@ -64,9 +64,6 @@
 
     <footer class="footer">
         <div class="footer-content">
-            <div class="footer-right">
-                
-            </div>
         </div>
     </footer>
 
