--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <p class="lead-text">ML Professional, Fashion Hobbyist</p>
                     <p>I'm a recent MSCS graduate from Georgia Tech currently working as a Machine Learning engineer in the defense space, focused on making
                         operators' lives easier through Computer Vision and LLMs. When I'm not working you can find me
-                        reading, watching movies, or trying to emulate Carmy from The Bear.
+                        reading, watching movies, or trying to find new ways to wear all black
                     </p>
                 </div>
                 <div class="profile-image">
