--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <div class="section-content about-flex">
                 <div class="about-text">
                     <h2>About Me</h2>
-                    <p class="lead-text">ML Professional, Fashion Hobbyist</p>
-                    <p>I'm a recent MSCS graduate from Georgia Tech currently working as a Machine Learning engineer in the defense space, focused on making
-                        operators' lives easier through Computer Vision and LLMs. When I'm not working you can find me
-                        reading, watching movies, or trying to find new ways to wear all black
+                    <p class="lead-text">ML Professional, Film Enthusiast</p>
+                    <p>I'm a recent MSCS graduate from Georgia Tech currently working as a Machine Learning Engineer in the defense space, focused on making
+                        operators' lives easier through LLM agents and Computer Vision. When I'm not working you can find me
+                        reading, gaming, or updating my Letterboxd.
                     </p>
                 </div>
                 <div class="profile-image">
